[gd_scene load_steps=3 format=3 uid="uid://bx8k7nan2p4q5"]

[ext_resource type="Script" path="res://Scripts/TutorialNotification.gd" id="1_tutorial"]

[sub_resource type="LabelSettings" id="LabelSettings_tutorial"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="TutorialNotification" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tutorial")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TutorialLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial Message"
label_settings = SubResource("LabelSettings_tutorial")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
